--- a/Application/Dockerfile
+++ b/Application/Dockerfile
@@ -14,4 +14,5 @@ RUN pip install -r requirements.txt
 
 EXPOSE 5000
 
-CMD ["python", "./app/app.py"] 
+#CMD ["python", "./app/app.py"] 
+CMD ["python", "./run.py"] 
